<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_PfeifferStatus" Id="{5940fef0-f9c3-48c7-ba29-0570add21519}">
    <Declaration><![CDATA[TYPE ST_PfeifferStatus :
STRUCT
	xPumpingStation_010: BOOL;
	xMotorPump_023: BOOL;
	iGasMode_027: INT;
	sErrorCode_303: STRING;
	iErrorCode_303	:	INT;
	iWarningCode_303	:	INT;
	xExcessTempPump_305: BOOL;
	xRotationSpeedAttn_306: BOOL;
	xPumpAccelerating_307: BOOL;
	diActiveRotationSpeed_309: DINT;
	lrDriveCurrent_310: LREAL;
	diDrivePower_316: DINT;
	diTempElec_326: DINT;
	diTempPmpBot_330: DINT;
	diTempBearng_342: DINT;
	diTempMotor_346: DINT;
	uiPowerPct_708: UINT;
	xTimeout: BOOL;
	xErrorAcknowledged: BOOL; //Not actually read back from the pump, but tells us ErrAck has processed
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>